--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My first!!</title>
+    <title>My first!</title>
+    Lip
 </head>
 <body>
 
