Revert "First as right"
This reverts commit af5cd15dd67f0a0d1898f63c4b3e1218f6f30165.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My first!</title>
-    Lip
+    <title>My first!!</title>
 </head>
 <body>
 
