--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My first!!</title>
 </head>
 <body>
-<a href="https://google.com" target="_blank">Google</a>
+<a href="https://google.com" target="_blank">Google2</a>
 </body>
 </html>
